--- a/bromine/index.html
+++ b/bromine/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>不忘初心，方得始终。</title>
+		<title>我之所慕，斯心惟牵。</title>
 	    <meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<link rel="shortcut icon" href="http://lovejiani.duapp.com/favicon.ico">
         <link type="text/css" rel="stylesheet" href="./static/css/default.css"/ >
